--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,27 @@
 /**
  * This SCSS file combines all the required CSS
  */
-
 // Import the (precompiled) CSS for Leaflet
 @import "~leaflet/dist/leaflet.css";
+
+// Import required Bootstrap components
+$font-size-base: 0.75rem;
+$form-group-margin-bottom: 0.5rem;
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/input-group";
+@import "~bootstrap/scss/close";
+@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/print";
 
 // Import required Fontawesome styles
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
@@ -13,6 +31,9 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/larger";
 @import "~@fortawesome/fontawesome-free/scss/icons";
 @import "~@fortawesome/fontawesome-free/scss/solid";
+
+// Import custom markers
+@import "markers";
 
 // Make the view full height (required to automatically grow the map)
 html, body {
@@ -27,4 +48,38 @@ html, body {
 
 .state-active {
   color: #0078A8;
+}
+
+.marker-creation {
+  cursor: crosshair;
+
+  .leaflet-control-container {
+    cursor: initial;
+  }
+}
+
+.col-form-label {
+  font-weight: bold;
+}
+
+.leaflet-control-layers {
+  label {
+    margin-bottom: 0;
+    @extend .form-check;
+
+    input[type=checkbox], input[type=radio] {
+      margin-top: 0.15rem;
+      @extend .form-check-input;
+
+      & ~ span {
+        display: inline-block;
+      }
+    }
+  }
+}
+
+.modal {
+  &.show {
+    display: block;
+  }
 }
