--- a/src/markers.scss
+++ b/src/markers.scss
@@ -27,3 +27,19 @@
 @include svg-marker("danger", danger());
 @include svg-marker("redcross", redcross("red", "red"));
 @include svg-marker("graycross", redcross("gray", "red"));
+
+.text-marker {
+  width: auto !important;
+  height: auto !important;
+  padding: 0 5px;
+  white-space: nowrap;
+  background: #fff;
+  border-radius: 6px;
+
+  &:after {
+    display: block;
+    content: attr(title);
+    color: #003063;
+    font-size: 11px
+  }
+}
