--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,10 @@ html, body {
   color: #0078A8;
 }
 
+.text-marker.grid-base {
+  color: #b22222;
+}
+
 .marker-creation {
   cursor: crosshair;
 
