--- a/src/markers.scss
+++ b/src/markers.scss
@@ -23,6 +23,7 @@
 
 @include svg-marker("height", height("??"));
 @include svg-marker("height-22", height("2,2"));
+@include svg-marker("height-26", height("2,6"));
 @include svg-marker("height-27", height("2,7"));
 @include svg-marker("danger", danger());
 @include svg-marker("redcross", redcross("red", "red"));
@@ -31,7 +32,6 @@
 .leaflet-marker-icon > span {
   // Make sure the marker element is at the top of the container for anchors to be correct
   vertical-align: top;
-  line-height: 0;
 }
 
 .text-marker {
@@ -48,7 +48,7 @@
     border-radius: 6px;
 
     &:after {
-      content: attr(title);
+      content: attr(data-text);
       white-space: nowrap;
       line-height: 1.5;
       font-size: 11px;
